--- a/Projeto_SerDigital/estilo.css
+++ b/Projeto_SerDigital/estilo.css
@@ -11,10 +11,24 @@ body {
     color: var(--dark);
     text-align: center;
     margin: 0;
+
+    background-image: 
+        radial-gradient(circle at left top, rgb(142 173 213 / .3), transparent 600px),
+        radial-gradient(circle at right center, rgb(142 173 213 / .3), transparent 400px);
 }
 
 .content-wrapper-center {
-    padding: 1rem;
+    padding: 3rem 1rem 2rem;
+    max-width: 67.25rem; /*1076px*/
+    margin: auto;
+}
+
+.imagem {
+    text-align: center;
+}
+
+.hero_title {
+    margin-top: 0;
 }
 
 .header-menu {
@@ -23,13 +37,16 @@ body {
     text-align: right;
     
     /*funcionar com hamburguer menu*/
-    display: none;
+   /* display: none;*/
+}
+
+.header-menu li {
+    padding: .25em 0;
 }
 
 .header-menu a {
     display: block;
-    padding: 2em 0;
-
+    padding: 1.75em 0;
 }
 
 a {
@@ -70,6 +87,9 @@ img {
     max-width: 100%;
 }
 
+.brands {
+    text-align: center;
+}
 
 .brands h2 {
     font-size: 1rem;
@@ -105,6 +125,11 @@ img {
     padding: 1rem;
 }
 
+.testemunho_thumb {
+    width: 8.125rem;
+    height: 8.125em;
+}
+
 .contato {
     background-color: var(--gray);
     border-radius: 5px;
@@ -118,7 +143,6 @@ img {
 
 .footer {
     background-color: var(--gray);
-    padding: 3rem 0;
 }
 
 .footer ul {
@@ -153,7 +177,30 @@ img {
 .row {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    gap: 3rem;
+    gap: .5rem;
+    grid-auto-flow: dense; /*Para preencher os espaços em branco*/
+}
+
+.row.testemunhos_wrapper {
+    row-gap: 3rem;
+}
+
+.row.contato {
+    padding-top: 4rem; /*64px*/
+    padding-bottom: 4rem; /*64px*/
+}
+
+.contato_title {
+    margin-top: 0;
+}
+
+.icons li {
+    display: inline-block;
+    font-size: 2rem;
+}
+
+.icons li + li {
+    margin-left: 1rem;
 }
 
 .row > .sm-12 {
@@ -161,7 +208,223 @@ img {
 }
 
 @media screen and (min-width: 46.25em) {
+
+    body {
+        text-align: left;
+    }
+
+    h1 {
+        font-size: 3.625rem;
+    }
+    
+    h2 {
+        font-size: 2.875rem;
+    }
+
+    .header {
+        align-items: center;
+    }
+
+    .menu-btn, 
+    .menu-icon {
+        display: none;
+    }
+
+    .header-menu {
+        /*display: block;*/
+        margin: 0;
+    }
+
+    .header-menu li {
+        display: inline-block;
+        margin-left: 1.75rem;
+    }
+
+    .header-menu a {
+        padding: 1rem;
+    }
+
+    .testemunho {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .contato_image {
+        display: block;
+        text-align: center;
+    }
+
+    .row {
+        gap: 1rem;
+    }
+
+    .row > .md-3 {
+        grid-column: span 3;
+    }
+
+    .row > .md-4 {
+        grid-column: span 4;
+    }
+
+    .row > .md-6 {
+        grid-column: span 6;
+    }
+
+    .row > .md-9 {
+        grid-column: span 9;
+    }
+
+    .row > .md-1-6 {
+        grid-column: 1 / 7;
+    }
+
+    .row > .md-7-12 {
+        grid-column: 7 / 13;
+    }
+
+}
+
+@media screen and (min-width: 90em) {
+
+    .hero_title {
+        margin-bottom: 6.25rem;
+    }
+
+    .testemunho {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .row {
+        gap: 3rem;
+    }
+
+    .row > .lg-3 {
+        grid-column: span 3;
+    }
+
     .row > .lg-4 {
         grid-column: span 4;
     }
+
+    .row > .lg-5 {
+        grid-column: span 5;
+    }
+
+    .row > .lg-6 {
+        grid-column: span 6;
+    }
+
+    .row > .lg-7 {
+        grid-column: span 7;
+    }
+
+    .row > .lg-1-5 {
+        grid-column: 1 / 6;
+    }
+
+    .row > .lg-1-7 {
+        grid-column: 1 / 8;
+    }
+
+    .row > .lg-8-12 {
+        grid-column: 8 / 13;
+    }
+}
+
+
+/* Hamburguer Menu*/
+
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-menu {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100px;
+    max-height: 0;
+    overflow: hidden;
+    background-color: #FFF;
+
+    transition: max-height .3s;
+    margin: 0;
+    padding-right: 1rem;
+    padding-left: 1rem;
+}
+
+.menu-btn:checked ~ .header-menu {
+    max-height: 100vh;
+}
+
+.menu-btn:checked+.menu-icon .nav-icon {
+    background-color: transparent;
+}
+
+.header-menu:focus-within {
+    max-height: 100vh;
+}
+
+@media screen and (min-width: 46.25em) {
+    .header-menu{
+        position: static;
+        max-height: initial;
+        background-color: initial;
+    }
+}
+
+.header nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.menu-icon {
+    position: relative;
+    cursor: pointer;
+    height: 24px;
+    /*user-select: none;*/
+}
+
+.nav-icon {
+    background-color: #333;
+    display: inline-block;
+    height: 2px;
+    width: 24px;
+    position: relative;
+}
+
+.nav-icon::after, .nav-icon::before {
+    content: '';
+    background-color: #333;
+    display: inline-block;
+    height: 2px;
+    width: 24px;
+    position: absolute;
+    transition: transform .3s;
+}
+
+.nav-icon::after {
+    transform: translateY(8px);
+}
+
+.nav-icon::before{
+    transform: translateY(-8px);
+}
+
+.menu-btn:checked + .menu-icon .nav-icon::before {
+    transform: rotate(-45deg);
+}
+
+.menu-btn:checked + .menu-icon .nav-icon::after {
+    transform: rotate(45deg);
+}
+
+.menu-btn:focus-visible + .menu-icon {
+    outline: 2px solid black;
+    outline-offset: 3px;
 }
